2003-12-26  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* subsim.cpp game.cpp game.h
	  - added an interface to load and save games (ripped from advse)
	  - added a "load game" option in the "play single mission" menu
	  - next release should be after loading/saving works 100%

2003-12-26  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* game, sea_object and heirs, date
	  - introduced load/save functions
	  - most objects can be loaded and saved binary now
	  - factory functions for ship/sub/water_splash still missing
	  - fixed bug in file selection dialogue

2003-12-25  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* game, user_interface
	  - moved menu display and handling outside of game, thus fixing the
	    bug, that time continues while the game menu is shown.
	    And a sane handling of a game by its caller is now realized.
	    Now more chain: subsim -> game -> user_interface -> resultmenu
	    In short: the whole structure is saner, it is similar to that in
	    ADVSE
	  - more widget usage: menues historical/custom mission, results,
	    game options
	  - added all scanned images that were resting in some data folder
	  - allowed model display without material -> sky is black at night
	  - fixed bug in tokenizer

2003-12-25  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* version number increased to 0.0.15
	* first bits of widget usage:
	  display results in subsim, not in game, using widgets
	* bug in torpedo handling found, but not in code (not searched yet)

2003-12-23  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* released 0.0.14

2003-12-22  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* uploaded dangerdeep.dsw/dsp files to compile
	  dftd, adapted tinyxml.h
	* used SDL_GL_GetProcAddress for OpenGL extensions instead
	  of wgl/glx functions.
	* user_interface.cpp
	  - used automatic OpenGL texture coordinate generation to save
	    space (display lists are smaller)

2003-12-17  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* several files: